--- a/lang/language_en_US.properties
+++ b/lang/language_en_US.properties
@@ -4,11 +4,22 @@ modules.item.hypixelserver = Server
 modules.item.hypixelserver.desc= Displays your connected server on the Hypixel Network.
 modules.item.hypixelmap = Map
 modules.item.hypixelmap.desc= Displays your playing map on the Hypixel Network.
-modules.item.hypixelswkit = SkyWars Kit
-modules.item.hypixelswkit.desc= Displays your selected kit in SkyWars on the Hypixel Network.
-modules.item.hypixelswcageopen = SkyWars Cage open count
-modules.item.hypixelswcageopen.desc= Displays cage open count in SkyWars on the Hypixel Network.
+modules.item.hypixelgame = Game
+modules.item.hypixelgame.desc= Displays your playing game on the Hypixel Network.
+modules.item.hypixelkit = Kit
+modules.item.hypixelkit.desc= Displays your selected kit on the Hypixel Network.
+modules.item.hypixelcageopen = Cage open countdown
+modules.item.hypixelcageopen.desc= Displays cage open countdown on the Hypixel Network.
+modules.item.hypixelshothp = Large Shot HP
+modules.item.hypixelshothp.desc= Displays large Shot HP on the Hypixel Network.
 
 ingame.server = Server
 ingame.map = Map
+ingame.game = Game
+ingame.kit = kit
+
 ingame.cageopen_in = Cages open in %s seconds!
+ingame.shothp = \u00A7f%s\u00A7e is on \u00A7c%s \u00A7eHP!
+
+hypixel5zig.update = A new version is available!
+hypixel5zig.higherversion = Higher version than the latest version
