--- a/lang/language_ja_JP.properties
+++ b/lang/language_ja_JP.properties
@@ -2,14 +2,25 @@ modules.category.hypixel5zig = \u30D7\u30E9\u30B0\u30A4\u30F3 Hypixel5zig
 
 modules.item.hypixelserver = \u30B5\u30FC\u30D0\u30FC
 modules.item.hypixelserver.desc= Hypixel Network\u3067\u63A5\u7D9A\u3057\u3066\u3044\u308B\u30B5\u30FC\u30D0\u30FC\u3092\u8868\u793A\u3057\u307E\u3059\u3002
+modules.item.hypixelgame = \u30B2\u30FC\u30E0
+modules.item.hypixelgame.desc= Hypixel Network\u3067\u30D7\u30EC\u30A4\u4E2D\u306E\u30B2\u30FC\u30E0\u3092\u8868\u793A\u3057\u307E\u3059\u3002
 modules.item.hypixelmap = \u30DE\u30C3\u30D7
 modules.item.hypixelmap.desc= Hypixel Network\u3067\u30D7\u30EC\u30A4\u4E2D\u306E\u30DE\u30C3\u30D7\u3092\u8868\u793A\u3057\u307E\u3059\u3002
-modules.item.hypixelswkit = SkyWars \u30AD\u30C3\u30C8
-modules.item.hypixelswkit.desc= Hypixel Network\u306ESkyWars\u3067\u9078\u629E\u4E2D\u306E\u30AD\u30C3\u30C8\u3092\u8868\u793A\u3057\u307E\u3059\u3002
-modules.item.hypixelswcageopen = SkyWars \u30B1\u30FC\u30B8\u304C\u958B\u304F\u307E\u3067\u306E\u6642\u9593
-modules.item.hypixelswcageopen.desc= Hypixel Network\u306ESkyWars\u3067\u30B1\u30FC\u30B8\u304C\u958B\u304F\u307E\u3067\u306E\u6642\u9593\u3092\u8868\u793A\u3057\u307E\u3059\u3002
+modules.item.hypixelkit = \u30AD\u30C3\u30C8
+modules.item.hypixelkit.desc= Hypixel Network\u3067\u9078\u629E\u4E2D\u306E\u30AD\u30C3\u30C8\u3092\u8868\u793A\u3057\u307E\u3059\u3002
+modules.item.hypixelcageopen = \u30B1\u30FC\u30B8\u304C\u958B\u304F\u307E\u3067\u306E\u6642\u9593
+modules.item.hypixelcageopen.desc= Hypixel Network\u3067\u30B1\u30FC\u30B8\u304C\u958B\u304F\u307E\u3067\u306E\u6642\u9593\u3092\u8868\u793A\u3057\u307E\u3059\u3002
+modules.item.hypixelshothp = Large Shot HP
+modules.item.hypixelshothp.desc= Hypixel Network\u3067\u6575\u306B\u77E2\u304C\u5F53\u305F\u3063\u305F\u6642\u306B\u8868\u793A\u3055\u308C\u308BHP\u3092\u5927\u304D\u304F\u8868\u793A\u3057\u307E\u3059\u3002
 
 ingame.server = \u30B5\u30FC\u30D0\u30FC
 ingame.map  = \u30DE\u30C3\u30D7
-ingame.swkit = \u30AD\u30C3\u30C8
+ingame.kit = \u30AD\u30C3\u30C8
+ingame.game = \u30B2\u30FC\u30E0
+ingame.kit = \u30AD\u30C3\u30C8
+
 ingame.cageopen_in = \u30B1\u30FC\u30B8\u306F%s\u79D2\u5F8C\u306B\u958B\u304D\u307E\u3059!
+#ingame.shothp = \u00A7f%s\u00A7e is on \u00A7c%s \u00A7eHP!
+
+hypixel5zig.update = \u65B0\u3057\u3044\u30D0\u30FC\u30B8\u30E7\u30F3\u304C\u5229\u7528\u53EF\u80FD\u3067\u3059!
+hypixel5zig.higherversion = \u6700\u65B0\u30D0\u30FC\u30B8\u30E7\u30F3\u3088\u308A\u3082\u65B0\u3057\u3044\u30D0\u30FC\u30B8\u30E7\u30F3
