--- a/lang/language_ja_JP.properties
+++ b/lang/language_ja_JP.properties
@@ -8,6 +8,10 @@ modules.item.hypixelmap = \u30DE\u30C3\u30D7
 modules.item.hypixelmap.desc= Hypixel Network\u3067\u30D7\u30EC\u30A4\u4E2D\u306E\u30DE\u30C3\u30D7\u3092\u8868\u793A\u3057\u307E\u3059\u3002
 modules.item.hypixelkit = \u30AD\u30C3\u30C8
 modules.item.hypixelkit.desc= Hypixel Network\u3067\u9078\u629E\u4E2D\u306E\u30AD\u30C3\u30C8\u3092\u8868\u793A\u3057\u307E\u3059\u3002
+modules.item.hypixelassists = \u30A2\u30B7\u30B9\u30C8
+modules.item.hypixelassists.desc= Hypixel Network\u3067\u3042\u306A\u305F\u304C\u30A2\u30B7\u30B9\u30C8\u3057\u305F\u56DE\u6570\u3092\u8868\u793A\u3057\u307E\u3059\u3002
+modules.item.hypixelcoins = \u7372\u5F97\u30B3\u30A4\u30F3
+modules.item.hypixelcoins.desc= Hypixel Network\u3067\u7372\u5F97\u3057\u305F\u30B3\u30A4\u30F3\u3092\u8868\u793A\u3057\u307E\u3059\u3002
 modules.item.hypixelcageopen = \u30B1\u30FC\u30B8\u304C\u958B\u304F\u307E\u3067\u306E\u6642\u9593
 modules.item.hypixelcageopen.desc= Hypixel Network\u3067\u30B1\u30FC\u30B8\u304C\u958B\u304F\u307E\u3067\u306E\u6642\u9593\u3092\u8868\u793A\u3057\u307E\u3059\u3002
 modules.item.hypixelshothp = Large Shot HP
@@ -18,6 +22,8 @@ ingame.map  = \u30DE\u30C3\u30D7
 ingame.kit = \u30AD\u30C3\u30C8
 ingame.game = \u30B2\u30FC\u30E0
 ingame.kit = \u30AD\u30C3\u30C8
+ingame.assists = \u30A2\u30B7\u30B9\u30C8
+ingame.coins = Coins
 
 ingame.cageopen_in = \u30B1\u30FC\u30B8\u306F%s\u79D2\u5F8C\u306B\u958B\u304D\u307E\u3059!
 #ingame.shothp = \u00A7f%s\u00A7e is on \u00A7c%s \u00A7eHP!
