--- a/lang/language_en_US.properties
+++ b/lang/language_en_US.properties
@@ -8,6 +8,10 @@ modules.item.hypixelgame = Game
 modules.item.hypixelgame.desc= Displays your playing game on the Hypixel Network.
 modules.item.hypixelkit = Kit
 modules.item.hypixelkit.desc= Displays your selected kit on the Hypixel Network.
+modules.item.hypixelassists = Assists
+modules.item.hypixelassists.desc= Displays your Assists on the Hypixel Network.
+modules.item.hypixelcoins = Earned Coins
+modules.item.hypixelcoins.desc= Displays your earned coins on the Hypixel Network.
 modules.item.hypixelcageopen = Cage open countdown
 modules.item.hypixelcageopen.desc= Displays cage open countdown on the Hypixel Network.
 modules.item.hypixelshothp = Large Shot HP
@@ -16,7 +20,9 @@ modules.item.hypixelshothp.desc= Displays large Shot HP on the Hypixel Network.
 ingame.server = Server
 ingame.map = Map
 ingame.game = Game
-ingame.kit = kit
+ingame.kit = Kit
+ingame.assists = Assists
+ingame.coins = Coins
 
 ingame.cageopen_in = Cages open in %s seconds!
 ingame.shothp = \u00A7f%s\u00A7e is on \u00A7c%s \u00A7eHP!
