--- a/src/lang/language_en_US.properties
+++ b/src/lang/language_en_US.properties
@@ -8,6 +8,8 @@ modules.item.hypixelgame = Game
 modules.item.hypixelgame.desc= Displays your playing game on the Hypixel Network.
 modules.item.hypixelkit = Kit
 modules.item.hypixelkit.desc= Displays your selected kit on the Hypixel Network.
+modules.item.hypixelteam = Team
+modules.item.hypixelteam.desc= Displays your team on the Hypixel Network.
 modules.item.hypixelassists = Assists
 modules.item.hypixelassists.desc= Displays your Assists on the Hypixel Network.
 modules.item.hypixelcoins = Earned Coins
@@ -21,6 +23,7 @@ ingame.server = Server
 ingame.map = Map
 ingame.game = Game
 ingame.kit = Kit
+ingame.team = Team
 ingame.assists = Assists
 ingame.coins = Coins
 
