--- a/src/lang/language_en_US.properties
+++ b/src/lang/language_en_US.properties
@@ -17,7 +17,9 @@ modules.item.hypixelcoins.desc= Displays your earned coins on the Hypixel Networ
 modules.item.hypixelcageopen = Cage open countdown
 modules.item.hypixelcageopen.desc= Displays cage open countdown on the Hypixel Network.
 modules.item.hypixelshothp = Large Shot HP
-modules.item.hypixelshothp.desc= Displays large Shot HP on the Hypixel Network.
+modules.item.hypixelshothp.desc = Displays large Shot HP on the Hypixel Network.
+modules.item.hypixeltheme = Theme
+modules.item.hypixeltheme.desc = Displays build theme in Build Battle on the Hypixel Network
 
 ingame.server = Server
 ingame.map = Map
@@ -26,6 +28,7 @@ ingame.kit = Kit
 ingame.team = Team
 ingame.assists = Assists
 ingame.coins = Coins
+ingame.theme = Theme
 
 ingame.cageopen_in = Cages open in %s seconds!
 ingame.shothp = \u00A7f%s\u00A7e is on \u00A7c%s \u00A7eHP!
