--- a/src/lang/language_en_US.properties
+++ b/src/lang/language_en_US.properties
@@ -19,7 +19,7 @@ modules.item.hypixelcageopen.desc= Displays cage open countdown on the Hypixel N
 modules.item.hypixelshothp = Large Shot HP
 modules.item.hypixelshothp.desc = Displays large Shot HP on the Hypixel Network.
 modules.item.hypixeltheme = Theme
-modules.item.hypixeltheme.desc = Displays build theme in Build Battle on the Hypixel Network
+modules.item.hypixeltheme.desc = Displays build theme in Build Battle on the Hypixel Network.
 
 ingame.server = Server
 ingame.map = Map
