--- a/src/lang/language_en_US.properties
+++ b/src/lang/language_en_US.properties
@@ -18,8 +18,8 @@ modules.item.hypixelcageopen = Cage open countdown
 modules.item.hypixelcageopen.desc= Displays cage open countdown on the Hypixel Network.
 modules.item.hypixelshothp = Large Shot HP
 modules.item.hypixelshothp.desc = Displays large Shot HP on the Hypixel Network.
-modules.item.hypixeltheme = Theme
-modules.item.hypixeltheme.desc = Displays build theme in Build Battle on the Hypixel Network.
+modules.item.hypixel_bb_theme = BuildBatte Theme
+modules.item.hypixel_bb_theme.desc = Displays build theme in Build Battle on the Hypixel Network.
 
 ingame.server = Server
 ingame.map = Map
