--- a/src/lang/language_ja_JP.properties
+++ b/src/lang/language_ja_JP.properties
@@ -1,32 +1,38 @@
 #X-Generator: crowdin.com
-modules.category.hypixel5zig=Plugin Hypixel5zig
+modules.category.hypixel5zig=\u30d7\u30e9\u30b0\u30a4\u30f3 Hypixel5zig
 
-modules.item.hypixelserver=Server
-modules.item.hypixelserver.desc=Displays your connected server on the Hypixel Network.
-modules.item.hypixelmap=Map
-modules.item.hypixelmap.desc=Displays your playing map on the Hypixel Network.
-modules.item.hypixelgame=Game
-modules.item.hypixelgame.desc=Displays your playing game on the Hypixel Network.
-modules.item.hypixelkit=Kit
-modules.item.hypixelkit.desc=Displays your selected kit on the Hypixel Network.
-modules.item.hypixelassists=Assists
-modules.item.hypixelassists.desc=Displays your Assists on the Hypixel Network.
-modules.item.hypixelcoins=Earned Coins
-modules.item.hypixelcoins.desc=Displays your earned coins on the Hypixel Network.
-modules.item.hypixelcageopen=Cage open countdown
-modules.item.hypixelcageopen.desc=Displays cage open countdown on the Hypixel Network.
-modules.item.hypixelshothp=Large Shot HP
-modules.item.hypixelshothp.desc=Displays large Shot HP on the Hypixel Network.
+modules.item.hypixelserver=\u30b5\u30fc\u30d0\u30fc
+modules.item.hypixelserver.desc=Hypixel Network\u3067\u63a5\u7d9a\u3057\u3066\u3044\u308b\u30b5\u30fc\u30d0\u30fc\u3092\u8868\u793a\u3057\u307e\u3059\u3002
+modules.item.hypixelmap=\u30de\u30c3\u30d7
+modules.item.hypixelmap.desc=Hypixel Network\u3067\u30d7\u30ec\u30a4\u4e2d\u306e\u30de\u30c3\u30d7\u3092\u8868\u793a\u3057\u307e\u3059\u3002
+modules.item.hypixelgame=\u30b2\u30fc\u30e0
+modules.item.hypixelgame.desc=Hypixel Network\u3067\u30d7\u30ec\u30a4\u4e2d\u306e\u30b2\u30fc\u30e0\u3092\u8868\u793a\u3057\u307e\u3059\u3002
+modules.item.hypixelkit=\u30ad\u30c3\u30c8
+modules.item.hypixelkit.desc=Hypixel Network\u3067\u9078\u629e\u4e2d\u306e\u30ad\u30c3\u30c8\u3092\u8868\u793a\u3057\u307e\u3059\u3002
+modules.item.hypixelteam=\u30c1\u30fc\u30e0
+modules.item.hypixelteam.desc=Hypixel Network\u3067\u3042\u306a\u305f\u306e\u30c1\u30fc\u30e0\u3092\u8868\u793a\u3057\u307e\u3059\u3002
+modules.item.hypixelassists=\u30a2\u30b7\u30b9\u30c8
+modules.item.hypixelassists.desc=Hypixel Network\u3067\u3042\u306a\u305f\u304c\u30a2\u30b7\u30b9\u30c8\u3057\u305f\u56de\u6570\u3092\u8868\u793a\u3057\u307e\u3059\u3002
+modules.item.hypixelcoins=\u7372\u5f97\u30b3\u30a4\u30f3
+modules.item.hypixelcoins.desc=Hypixel Network\u3067\u7372\u5f97\u3057\u305f\u30b3\u30a4\u30f3\u3092\u8868\u793a\u3057\u307e\u3059\u3002
+modules.item.hypixelcageopen=\u30b1\u30fc\u30b8\u304c\u958b\u304f\u307e\u3067\u306e\u6642\u9593
+modules.item.hypixelcageopen.desc=Hypixel Network\u3067\u30b1\u30fc\u30b8\u304c\u958b\u304f\u307e\u3067\u306e\u6642\u9593\u3092\u8868\u793a\u3057\u307e\u3059\u3002
+modules.item.hypixelshothp=\u5927\u304d\u3044 Shot HP
+modules.item.hypixelshothp.desc=Hypixel Network\u3067\u6575\u306b\u77e2\u304c\u5f53\u305f\u3063\u305f\u6642\u306b\u8868\u793a\u3055\u308c\u308bHP\u3092\u5927\u304d\u304f\u8868\u793a\u3057\u307e\u3059\u3002
+modules.item.hypixel_bb_theme=BuildBattle \u30c6\u30fc\u30de
+modules.item.hypixel_bb_theme.desc=Hypixel Network\u306eBuild Battle\u3067\u5efa\u7bc9\u30c6\u30fc\u30de\u3092\u8868\u793a\u3057\u307e\u3059\u3002
 
-ingame.server=Server
-ingame.map=Map
-ingame.game=Game
-ingame.kit=Kit
-ingame.assists=Assists
-ingame.coins=Coins
+ingame.server=\u30b5\u30fc\u30d0\u30fc
+ingame.map=\u30de\u30c3\u30d7
+ingame.game=\u30b2\u30fc\u30e0
+ingame.kit=\u30ad\u30c3\u30c8
+ingame.team=\u30c1\u30fc\u30e0
+ingame.assists=\u30a2\u30b7\u30b9\u30c8
+ingame.coins=\u30b3\u30a4\u30f3
+ingame.theme=\u30c6\u30fc\u30de
 
-ingame.cageopen_in=Cages open in %s seconds\!
+ingame.cageopen_in=\u30b1\u30fc\u30b8\u306f%s\u79d2\u5f8c\u306b\u958b\u304d\u307e\u3059\!
 ingame.shothp=\u00a7f%s\u00a7e is on \u00a7c%s \u00a7eHP\!
 
-hypixel5zig.update=A new version is available\!
-hypixel5zig.higherversion=Higher version than the latest version
+hypixel5zig.update=\u65b0\u3057\u3044\u30d0\u30fc\u30b8\u30e7\u30f3\u304c\u5229\u7528\u53ef\u80fd\u3067\u3059\!
+hypixel5zig.higherversion=\u6700\u65b0\u30d0\u30fc\u30b8\u30e7\u30f3\u3088\u308a\u3082\u65b0\u3057\u3044\u30d0\u30fc\u30b8\u30e7\u30f3
