--- a/src/lang/language_en_US.properties
+++ b/src/lang/language_en_US.properties
@@ -10,6 +10,10 @@ modules.item.hypixelkit = Kit
 modules.item.hypixelkit.desc= Displays your selected kit on the Hypixel Network.
 modules.item.hypixelteam = Team
 modules.item.hypixelteam.desc= Displays your team on the Hypixel Network.
+modules.item.hypixelwinstreak = Winstreak
+modules.item.hypixelwinstreak.desc= Displays your Winstreak on the Hypixel Network.
+modules.item.hypixelkillstreak = Killstreak
+modules.item.hypixelkillstreak.desc= Displays your Killstreak on the Hypixel Network.
 modules.item.hypixelassists = Assists
 modules.item.hypixelassists.desc= Displays your Assists on the Hypixel Network.
 modules.item.hypixelcoins = Earned Coins
