--- a/src/lang/language_ja_JP.properties
+++ b/src/lang/language_ja_JP.properties
@@ -9,8 +9,12 @@ modules.item.hypixelgame=\u30b2\u30fc\u30e0
 modules.item.hypixelgame.desc=Hypixel Network\u3067\u30d7\u30ec\u30a4\u4e2d\u306e\u30b2\u30fc\u30e0\u3092\u8868\u793a\u3057\u307e\u3059\u3002
 modules.item.hypixelkit=\u30ad\u30c3\u30c8
 modules.item.hypixelkit.desc=Hypixel Network\u3067\u9078\u629e\u4e2d\u306e\u30ad\u30c3\u30c8\u3092\u8868\u793a\u3057\u307e\u3059\u3002
-modules.item.hypixelteam=\u30c1\u30fc\u30e0
-modules.item.hypixelteam.desc=Hypixel Network\u3067\u3042\u306a\u305f\u306e\u30c1\u30fc\u30e0\u3092\u8868\u793a\u3057\u307e\u3059\u3002
+modules.item.hypixelteam=\u30C1\u30FC\u30E0
+modules.item.hypixelteam.desc=Hypixel Network\u3067\u3042\u306A\u305F\u306E\u30C1\u30FC\u30E0\u3092\u8868\u793A\u3057\u307E\u3059\u3002
+modules.item.hypixelwinstreak = Winstreak
+modules.item.hypixelwinstreak.desc= Hypixel Network\u3067\u3042\u306A\u305F\u306E\u9023\u52DD\u6570\u3092\u8868\u793A\u3057\u307E\u3059\u3002
+modules.item.hypixelkillstreak = Killstreak
+modules.item.hypixelkillstreak.desc= Hypixel Network\u3067\u3042\u306A\u305F\u306E\u9023\u7D9A\u30AD\u30EB\u6570\u3092\u8868\u793A\u3057\u307E\u3059\u3002
 modules.item.hypixelassists=\u30a2\u30b7\u30b9\u30c8
 modules.item.hypixelassists.desc=Hypixel Network\u3067\u3042\u306a\u305f\u304c\u30a2\u30b7\u30b9\u30c8\u3057\u305f\u56de\u6570\u3092\u8868\u793a\u3057\u307e\u3059\u3002
 modules.item.hypixelcoins=\u7372\u5f97\u30b3\u30a4\u30f3
@@ -32,7 +36,6 @@ ingame.coins=\u30b3\u30a4\u30f3
 ingame.theme=\u30c6\u30fc\u30de
 
 ingame.cageopen_in=\u30b1\u30fc\u30b8\u306f%s\u79d2\u5f8c\u306b\u958b\u304d\u307e\u3059\!
-ingame.shothp=\u00a7f%s\u00a7e is on \u00a7c%s \u00a7eHP\!
 
 hypixel5zig.update=\u65b0\u3057\u3044\u30d0\u30fc\u30b8\u30e7\u30f3\u304c\u5229\u7528\u53ef\u80fd\u3067\u3059\!
 hypixel5zig.higherversion=\u6700\u65b0\u30d0\u30fc\u30b8\u30e7\u30f3\u3088\u308a\u3082\u65b0\u3057\u3044\u30d0\u30fc\u30b8\u30e7\u30f3
